--- a/translations/admin+intl-icu.es.xlf
+++ b/translations/admin+intl-icu.es.xlf
@@ -2686,7 +2686,7 @@
       </notes>
       <segment>
         <source>Stadtübergreifende Kommunikation verbieten</source>
-        <target>Publicación en el foro del pueblo</target>
+        <target>Comunicarse fuera de las ciudades (PMs)</target>
       </segment>
     </unit>
     <unit id="4Ih2_KV" name="Kommentare verbieten">
