--- a/translations/admin+intl-icu.fr.xlf
+++ b/translations/admin+intl-icu.fr.xlf
@@ -2697,7 +2697,7 @@
       </notes>
       <segment>
         <source>Stadtübergreifende Kommunikation verbieten</source>
-        <target>Publication sur le forum ville</target>
+        <target>Communications hors de la ville (MPs)</target>
       </segment>
     </unit>
     <unit id="4Ih2_KV" name="Kommentare verbieten">
