--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -7809,7 +7809,7 @@
       </notes>
       <segment>
         <source>Doch nichts passiert... Soviel steht fest, du stehst nun wie ein lausiger Amateur da. Außer Blasen an den Füßen hat das alles nichts eingebracht...</source>
-        <target>Mais rien ne se passe. C'est sur, si on vous a vu, vous êtes passé pour un amateur de la pire espèce. Et pour ne rien arranger vous avez des ampoules aux pieds maintenant...</target>
+        <target>Mais rien ne se passe. C'est sûr, si on vous a vu, vous êtes passé pour un amateur de la pire espèce. Et pour ne rien arranger vous avez des ampoules aux pieds maintenant...</target>
       </segment>
     </unit>
     <unit id="GuvA6wB">
