--- a/translations/admin+intl-icu.fr.xlf
+++ b/translations/admin+intl-icu.fr.xlf
@@ -4314,7 +4314,7 @@
       </notes>
       <segment>
         <source>Verbleibende Ruinengrabungen:</source>
-        <target>Fouilles de ruine restantes :</target>
+        <target>Déblaiements restants pour dévoiler le bâtiment :</target>
       </segment>
     </unit>
     <unit id="nOcPaSS" name="Zurzeit in der Stadt">
