--- a/translations/ghost+intl-icu.fr.xlf
+++ b/translations/ghost+intl-icu.fr.xlf
@@ -1825,5 +1825,27 @@
         <target>Goules affamées</target>
       </segment>
     </unit>
+    <unit id="RoR55TY" name="Seelenpunkt-Beschränkung deaktivieren:">
+      <notes>
+        <note category="german">Seelenpunkt-Beschränkung deaktivieren:</note>
+        <note category="from">twig:///templates/ajax/ghost/create_town.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Seelenpunkt-Beschränkung deaktivieren:</source>
+        <target>Seelenpunkt-Beschränkung deaktivieren:</target>
+      </segment>
+    </unit>
+    <unit id="DAbc25I">
+      <notes>
+        <note category="german">Jeder Spieler kann dieser Stadt beitreten, unabhängig davon wie viele Seelenpunkte er oder sie bereits erworben hat.</note>
+        <note category="from">twig:///templates/ajax/ghost/create_town.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Jeder Spieler kann dieser Stadt beitreten, unabhängig davon wie viele Seelenpunkte er oder sie bereits erworben hat.</source>
+        <target>Jeder Spieler kann dieser Stadt beitreten, unabhängig davon wie viele Seelenpunkte er oder sie bereits erworben hat.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
