--- a/translations/soul+intl-icu.fr.xlf
+++ b/translations/soul+intl-icu.fr.xlf
@@ -4742,5 +4742,38 @@
         <target>Modifier le profil</target>
       </segment>
     </unit>
+    <unit id="JRVXs3." name="Nicht länger ausblenden">
+      <notes>
+        <note category="german">Nicht länger ausblenden</note>
+        <note category="from">twig:///templates/ajax/soul/social.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Nicht länger ausblenden</source>
+        <target>Nicht länger ausblenden</target>
+      </segment>
+    </unit>
+    <unit id="BC_uip5" name="Ausblenden">
+      <notes>
+        <note category="german">Ausblenden</note>
+        <note category="from">twig:///templates/ajax/soul/social.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Ausblenden</source>
+        <target>Ausblenden</target>
+      </segment>
+    </unit>
+    <unit id="p5LaFyO" name="Ausgeblendete Spieler anzeigen">
+      <notes>
+        <note category="german">Ausgeblendete Spieler anzeigen</note>
+        <note category="from">twig:///templates/ajax/soul/social.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Ausgeblendete Spieler anzeigen</source>
+        <target>Ausgeblendete Spieler anzeigen</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
