--- a/translations/global+intl-icu.fr.xlf
+++ b/translations/global+intl-icu.fr.xlf
@@ -4283,5 +4283,15 @@
         <target>Liste des contacts</target>
       </segment>
     </unit>
+    <unit id="aD_1HUX" name="STRG">
+      <notes>
+        <note category="german">STRG</note>
+        <note category="from">twig:///templates/ajax/forum/editor.html.twig</note>
+      </notes>
+      <segment>
+        <source>STRG</source>
+        <target>CTRL</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
