--- a/translations/ghost+intl-icu.es.xlf
+++ b/translations/ghost+intl-icu.es.xlf
@@ -1832,7 +1832,7 @@
       </notes>
       <segment>
         <source>Seelenpunkt-Beschränkung deaktivieren:</source>
-        <target>Seelenpunkt-Beschränkung deaktivieren:</target>
+        <target>Ignorar restricciones por puntos de alma:</target>
       </segment>
     </unit>
     <unit id="DAbc25I">
@@ -1843,7 +1843,7 @@
       </notes>
       <segment>
         <source>Jeder Spieler kann dieser Stadt beitreten, unabhängig davon wie viele Seelenpunkte er oder sie bereits erworben hat.</source>
-        <target>Jeder Spieler kann dieser Stadt beitreten, unabhängig davon wie viele Seelenpunkte er oder sie bereits erworben hat.</target>
+        <target>Cualquier jugador (invitado) podrá unirse a tu pueblo, sin importar cuántos puntos de alma tenga.</target>
       </segment>
     </unit>
   </file>
