--- a/translations/items+intl-icu.de.xlf
+++ b/translations/items+intl-icu.de.xlf
@@ -16,7 +16,7 @@
       </notes>
       <segment>
         <source>Wow, du hast einen Trippel geworfen. Das hat so viel Spaß gemacht, dass du 1AP gewinnst!</source>
-        <target>Wow, du hast einen Trippel geworfen. Das hat so viel Spaß gemacht, dass du 1AP gewinnst!</target>
+        <target><![CDATA[Wow, du hast einen Trippel geworfen.<hr />Das hat so viel Spaß gemacht, dass du <strong>1AP gewinnst</strong>!]]></target>
       </segment>
     </unit>
     <unit id="rmGP8Al">
@@ -25,7 +25,7 @@
       </notes>
       <segment>
         <source>Wow, du hast eine Straße geworfen. Das hat so viel Spaß gemacht, dass du 1AP gewinnst!</source>
-        <target>Wow, du hast eine Straße geworfen. Das hat so viel Spaß gemacht, dass du 1AP gewinnst!</target>
+        <target><![CDATA[Wow, du hast eine Straße geworfen.<hr />Das hat so viel Spaß gemacht, dass du <strong>1AP gewinnst</strong>!]]></target>
       </segment>
     </unit>
     <unit id="Gk9gFU8">
@@ -34,7 +34,7 @@
       </notes>
       <segment>
         <source>Wow, du hast beim ersten Versuch eine 4-2-1 geworfen. Das hat so viel Spaß gemacht, dass du 1AP gewinnst!</source>
-        <target>Wow, du hast beim ersten Versuch eine 4-2-1 geworfen. Das hat so viel Spaß gemacht, dass du 1AP gewinnst!</target>
+        <target><![CDATA[Wow, du hast beim ersten Versuch eine 4-2-1 geworfen.<hr />Das hat so viel Spaß gemacht, dass du <strong>1AP gewinnst</strong>!]]></target>
       </segment>
     </unit>
     <unit id="087WiZd" name="Nicht schlecht, du hast einen Pasch geworfen.">
