--- a/translations/items+intl-icu.en.xlf
+++ b/translations/items+intl-icu.en.xlf
@@ -18,7 +18,7 @@
       </notes>
       <segment>
         <source>Wow, du hast einen Trippel geworfen. Das hat so viel Spaß gemacht, dass du 1AP gewinnst!</source>
-        <target>Nicely done, you got three of a kind! This is a great game! You're enjoying it so much that you have gained 1AP!</target>
+        <target><![CDATA[Nicely done, you got three of a kind! This is a great game!<hr />You're enjoying it so much that you have gained <strong>1AP</strong>!]]></target>
       </segment>
     </unit>
     <unit id="rmGP8Al">
@@ -28,7 +28,7 @@
       </notes>
       <segment>
         <source>Wow, du hast eine Straße geworfen. Das hat so viel Spaß gemacht, dass du 1AP gewinnst!</source>
-        <target>You have rolled a straight ! That always raises the spirits. You're enjoying it so much that you have gained 1AP!</target>
+        <target><![CDATA[You have rolled a straight ! That always raises the spirits.<hr />You're enjoying it so much that you have gained <strong>1AP</strong>!]]></target>
       </segment>
     </unit>
     <unit id="Gk9gFU8">
@@ -38,7 +38,7 @@
       </notes>
       <segment>
         <source>Wow, du hast beim ersten Versuch eine 4-2-1 geworfen. Das hat so viel Spaß gemacht, dass du 1AP gewinnst!</source>
-        <target>You got a 421 on your first shot... not bad. Furthermore, this has raised your morale so much that you have gained 1AP!</target>
+        <target><![CDATA[You got a 421 on your first shot... not bad.<hr />Furthermore, this has raised your morale so much that you have gained <strong>1AP</strong>!]]></target>
       </segment>
     </unit>
     <unit id="087WiZd" name="Nicht schlecht, du hast einen Pasch geworfen.">
