--- a/translations/items+intl-icu.es.xlf
+++ b/translations/items+intl-icu.es.xlf
@@ -18,7 +18,7 @@
       </notes>
       <segment>
         <source>Wow, du hast einen Trippel geworfen. Das hat so viel Spaß gemacht, dass du 1AP gewinnst!</source>
-        <target>¡Bravo, obtienes un Trío! ¡Es genial! Eso te pone tan contento que ganas 1PA.</target>
+        <target><![CDATA[¡Bravo, obtienes un Trío! ¡Es genial!<hr />Eso te pone tan contento que <strong>ganas 1PA</strong>.]]></target>
       </segment>
     </unit>
     <unit id="rmGP8Al">
@@ -28,7 +28,7 @@
       </notes>
       <segment>
         <source>Wow, du hast eine Straße geworfen. Das hat so viel Spaß gemacht, dass du 1AP gewinnst!</source>
-        <target>¡Formas una escalera! Eso te pone tan contento que ganas 1PA.</target>
+        <target><![CDATA[¡Formas una escalera!<hr />Eso te pone tan contento que <strong>ganas 1PA</strong>.]]></target>
       </segment>
     </unit>
     <unit id="Gk9gFU8">
@@ -38,7 +38,7 @@
       </notes>
       <segment>
         <source>Wow, du hast beim ersten Versuch eine 4-2-1 geworfen. Das hat so viel Spaß gemacht, dass du 1AP gewinnst!</source>
-        <target>Obtienes un 421 al primer intento... Nada mal. Eso te pone tan contento que ganas 1PA.</target>
+        <target><![CDATA[Obtienes un 421 al primer intento... Nada mal.<hr />Eso te pone tan contento que <strong>ganas 1PA</strong>.]]></target>
       </segment>
     </unit>
     <unit id="087WiZd" name="Nicht schlecht, du hast einen Pasch geworfen.">
