--- a/translations/items+intl-icu.fr.xlf
+++ b/translations/items+intl-icu.fr.xlf
@@ -28,7 +28,7 @@
       </notes>
       <segment>
         <source>Wow, du hast eine Straße geworfen. Das hat so viel Spaß gemacht, dass du 1AP gewinnst!</source>
-        <target>Vous formez une suite ! C'est toujours sympa pour le moral. Et ça vous fait tellement plaisir que vous gagnez 1 PA.</target>
+        <target><![CDATA[Vous formez une suite ! C'est toujours sympa pour le moral. <hr />Et ça vous fait tellement plaisir que vous gagnez <strong>1 PA</strong>.]]></target>
       </segment>
     </unit>
     <unit id="Gk9gFU8">
@@ -38,7 +38,7 @@
       </notes>
       <segment>
         <source>Wow, du hast beim ersten Versuch eine 4-2-1 geworfen. Das hat so viel Spaß gemacht, dass du 1AP gewinnst!</source>
-        <target>Vous obtenez un 421 du premier coup... Pas mal. D'ailleurs, ça vous remonte tellement le moral que vous gagnez 1 PA.</target>
+        <target><![CDATA[Vous obtenez un 421 du premier coup... Pas mal. <hr />D'ailleurs, ça vous remonte tellement le moral que vous gagnez <strong>1 PA</strong>.]]></target>
       </segment>
     </unit>
     <unit id="087WiZd" name="Nicht schlecht, du hast einen Pasch geworfen.">
