--- a/translations/soul+intl-icu.fr.xlf
+++ b/translations/soul+intl-icu.fr.xlf
@@ -4746,33 +4746,33 @@
       <notes>
         <note category="german">Nicht länger ausblenden</note>
         <note category="from">twig:///templates/ajax/soul/social.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Nicht länger ausblenden</source>
-        <target>Nicht länger ausblenden</target>
+        <target>Ne plus masquer</target>
       </segment>
     </unit>
     <unit id="BC_uip5" name="Ausblenden">
       <notes>
         <note category="german">Ausblenden</note>
         <note category="from">twig:///templates/ajax/soul/social.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Ausblenden</source>
-        <target>Ausblenden</target>
+        <target>Masquer</target>
       </segment>
     </unit>
     <unit id="p5LaFyO" name="Ausgeblendete Spieler anzeigen">
       <notes>
         <note category="german">Ausgeblendete Spieler anzeigen</note>
         <note category="from">twig:///templates/ajax/soul/social.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Ausgeblendete Spieler anzeigen</source>
-        <target>Ausgeblendete Spieler anzeigen</target>
+        <target>Liste des joueurs masqués</target>
       </segment>
     </unit>
   </file>
