--- a/translations/ghost+intl-icu.fr.xlf
+++ b/translations/ghost+intl-icu.fr.xlf
@@ -1829,22 +1829,22 @@
       <notes>
         <note category="german">Seelenpunkt-Beschränkung deaktivieren:</note>
         <note category="from">twig:///templates/ajax/ghost/create_town.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Seelenpunkt-Beschränkung deaktivieren:</source>
-        <target>Seelenpunkt-Beschränkung deaktivieren:</target>
+        <target>Désactiver les limitations de points d'âme :</target>
       </segment>
     </unit>
     <unit id="DAbc25I">
       <notes>
         <note category="german">Jeder Spieler kann dieser Stadt beitreten, unabhängig davon wie viele Seelenpunkte er oder sie bereits erworben hat.</note>
         <note category="from">twig:///templates/ajax/ghost/create_town.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Jeder Spieler kann dieser Stadt beitreten, unabhängig davon wie viele Seelenpunkte er oder sie bereits erworben hat.</source>
-        <target>Jeder Spieler kann dieser Stadt beitreten, unabhängig davon wie viele Seelenpunkte er oder sie bereits erworben hat.</target>
+        <target>N’importe quel joueur peut rejoindre cette ville, quel que soit le nombre de points d’âme qu’il possède actuellement.</target>
       </segment>
     </unit>
   </file>
