--- a/translations/gazette+intl-icu.de.xlf
+++ b/translations/gazette+intl-icu.de.xlf
@@ -2773,5 +2773,14 @@
         <target>Das neueste Geschwätz:</target>
       </segment>
     </unit>
+    <unit id="yH_PodW">
+      <notes>
+        <note category="from">php:///src/Service/GazetteService.php</note>
+      </notes>
+      <segment>
+        <source>Berichten unsere Späher, dass sie einen Mysteriösen Fremden in der Umgebung der Stadt gesichtet haben...</source>
+        <target>Berichten unsere Späher, dass sie einen Mysteriösen Fremden in der Umgebung der Stadt gesichtet haben...</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
