--- a/translations/gazette+intl-icu.en.xlf
+++ b/translations/gazette+intl-icu.en.xlf
@@ -3269,5 +3269,16 @@
         <target>Das neueste Geschwätz:</target>
       </segment>
     </unit>
+    <unit id="yH_PodW">
+      <notes>
+        <note category="german">Berichten unsere Späher, dass sie einen Mysteriösen Fremden in der Umgebung der Stadt gesichtet haben...</note>
+        <note category="from">php:///src/Service/GazetteService.php</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Berichten unsere Späher, dass sie einen Mysteriösen Fremden in der Umgebung der Stadt gesichtet haben...</source>
+        <target>Our scouts report that they have spotted a mysterious stranger in the vicinity of the town...</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
