--- a/translations/gazette+intl-icu.fr.xlf
+++ b/translations/gazette+intl-icu.fr.xlf
@@ -3085,5 +3085,16 @@
         <target>A part ça,</target>
       </segment>
     </unit>
+    <unit id="yH_PodW">
+      <notes>
+        <note category="german">Berichten unsere Späher, dass sie einen Mysteriösen Fremden in der Umgebung der Stadt gesichtet haben...</note>
+        <note category="from">php:///src/Service/GazetteService.php</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Berichten unsere Späher, dass sie einen Mysteriösen Fremden in der Umgebung der Stadt gesichtet haben...</source>
+        <target>Nos éclaireurs signalent avoir repéré un mystérieux étranger dans les environs de la ville...</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
