--- a/translations/gazette+intl-icu.en.xlf
+++ b/translations/gazette+intl-icu.en.xlf
@@ -3271,12 +3271,11 @@
     </unit>
     <unit id="yH_PodW">
       <notes>
-        <note category="german">Berichten unsere Späher, dass sie einen Mysteriösen Fremden in der Umgebung der Stadt gesichtet haben...</note>
+        <note category="german">Unsere Späher berichten, dass sie einen Mysteriösen Fremden in der Umgebung der Stadt gesichtet haben...</note>
         <note category="from">php:///src/Service/GazetteService.php</note>
-        <note category="state">new</note>
       </notes>
       <segment>
-        <source>Berichten unsere Späher, dass sie einen Mysteriösen Fremden in der Umgebung der Stadt gesichtet haben...</source>
+        <source>Unsere Späher berichten, dass sie einen Mysteriösen Fremden in der Umgebung der Stadt gesichtet haben...</source>
         <target>Our scouts report that they have spotted a mysterious stranger in the vicinity of the town...</target>
       </segment>
     </unit>
