--- a/translations/gazette+intl-icu.es.xlf
+++ b/translations/gazette+intl-icu.es.xlf
@@ -3265,8 +3265,8 @@
         <note category="state">new</note>
       </notes>
       <segment>
-        <source>Berichten unsere Späher, dass sie einen Mysteriösen Fremden in der Umgebung der Stadt gesichtet haben...</source>
-        <target>Berichten unsere Späher, dass sie einen Mysteriösen Fremden in der Umgebung der Stadt gesichtet haben...</target>
+        <source>Unsere Späher berichten, dass sie einen Mysteriösen Fremden in der Umgebung der Stadt gesichtet haben...</source>
+        <target>Unsere Späher berichten, dass sie einen Mysteriösen Fremden in der Umgebung der Stadt gesichtet haben...</target>
       </segment>
     </unit>
   </file>
