--- a/translations/gazette+intl-icu.fr.xlf
+++ b/translations/gazette+intl-icu.fr.xlf
@@ -3087,12 +3087,11 @@
     </unit>
     <unit id="yH_PodW">
       <notes>
-        <note category="german">Berichten unsere Späher, dass sie einen Mysteriösen Fremden in der Umgebung der Stadt gesichtet haben...</note>
+        <note category="german">Unsere Späher berichten, dass sie einen Mysteriösen Fremden in der Umgebung der Stadt gesichtet haben...</note>
         <note category="from">php:///src/Service/GazetteService.php</note>
-        <note category="state">new</note>
       </notes>
       <segment>
-        <source>Berichten unsere Späher, dass sie einen Mysteriösen Fremden in der Umgebung der Stadt gesichtet haben...</source>
+        <source>Unsere Späher berichten, dass sie einen Mysteriösen Fremden in der Umgebung der Stadt gesichtet haben...</source>
         <target>Nos éclaireurs signalent avoir repéré un mystérieux étranger dans les environs de la ville...</target>
       </segment>
     </unit>
