--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -22967,66 +22967,66 @@
       <notes>
         <note category="german">Die Horde kommt!</note>
         <note category="from">twig:///templates/ajax/game/notifications/stranger.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Die Horde kommt!</source>
-        <target>Die Horde kommt!</target>
+        <target>¡Ya vienen los Zombies!</target>
       </segment>
     </unit>
     <unit id="rxUjiVx">
       <notes>
         <note category="german">Ein fauliger Geruch liegt in der Luft und du hörst ein immer lauter werdendes Stöhnen in der Ferne...</note>
         <note category="from">twig:///templates/ajax/game/notifications/stranger.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Ein fauliger Geruch liegt in der Luft und du hörst ein immer lauter werdendes Stöhnen in der Ferne...</source>
-        <target>Ein fauliger Geruch liegt in der Luft und du hörst ein immer lauter werdendes Stöhnen in der Ferne...</target>
+        <target>Sientes un aroma horripilante en el aire y oyes a lo lejos un rugido cada vez más fuerte...</target>
       </segment>
     </unit>
     <unit id="4xBohtt">
       <notes>
         <note category="german">Die Zeichen sind klar; eine Horde von Zombies bewegt sich schlurfend auf die Stadt zu. Du schätzt, dass sie um Mitternacht eintreffen wird.</note>
         <note category="from">twig:///templates/ajax/game/notifications/stranger.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Die Zeichen sind klar; eine Horde von Zombies bewegt sich schlurfend auf die Stadt zu. Du schätzt, dass sie um Mitternacht eintreffen wird.</source>
-        <target>Die Zeichen sind klar; eine Horde von Zombies bewegt sich schlurfend auf die Stadt zu. Du schätzt, dass sie um Mitternacht eintreffen wird.</target>
+        <target>Las señales son claras: Una turba de zombies se aproxima al pueblo. Parece que llegarán a la medianoche.</target>
       </segment>
     </unit>
     <unit id="awC3BNG">
       <notes>
         <note category="german">Außerdem berichten unsere Späher, dass sie einen Mysteriösen Fremden in der Umgebung der Stadt gesichtet haben...</note>
         <note category="from">twig:///templates/ajax/game/notifications/stranger.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Außerdem berichten unsere Späher, dass sie einen Mysteriösen Fremden in der Umgebung der Stadt gesichtet haben...</source>
-        <target>Außerdem berichten unsere Späher, dass sie einen Mysteriösen Fremden in der Umgebung der Stadt gesichtet haben...</target>
+        <target>Además, nuestros vigilantes informan que han visto a un Extraño Misterioso rondando por el pueblo...</target>
       </segment>
     </unit>
     <unit id="N2bzV9x">
       <notes>
         <note category="german">Heute Nacht wird ein Angriff stattfinden, selbst wenn die Stadt noch keine Einwohnerzahl von {population} erreicht hat.</note>
         <note category="from">twig:///templates/ajax/game/notifications/stranger.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Heute Nacht wird ein Angriff stattfinden, selbst wenn die Stadt noch keine Einwohnerzahl von {population} erreicht hat.</source>
-        <target>Heute Nacht wird ein Angriff stattfinden, selbst wenn die Stadt noch keine Einwohnerzahl von {population} erreicht hat.</target>
+        <target>Esta noche habrá un Ataque Zombie, incluso si el pueblo tiene menos de {population} habitantes antes de la medianoche.</target>
       </segment>
     </unit>
     <unit id="07BtizJ" name="Du solltest anfangen, Vorbereitungen für die Verteidigung der Stadt zu treffen.">
       <notes>
         <note category="german">Du solltest anfangen, Vorbereitungen für die Verteidigung der Stadt zu treffen.</note>
         <note category="from">twig:///templates/ajax/game/notifications/stranger.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Du solltest anfangen, Vorbereitungen für die Verteidigung der Stadt zu treffen.</source>
-        <target>Du solltest anfangen, Vorbereitungen für die Verteidigung der Stadt zu treffen.</target>
+        <target>Llegó el día, aún tienes tiempo para preparar la defensa el pueblo.</target>
       </segment>
     </unit>
     <unit id="MpMKNqM">
