--- a/translations/gazette+intl-icu.de.xlf
+++ b/translations/gazette+intl-icu.de.xlf
@@ -2773,7 +2773,7 @@
         <target>Das neueste Geschwätz:</target>
       </segment>
     </unit>
-    <unit id="yH_PodW">
+    <unit id="Lg5PYa2">
       <notes>
         <note category="from">php:///src/Service/GazetteService.php</note>
       </notes>
