--- a/translations/gazette+intl-icu.es.xlf
+++ b/translations/gazette+intl-icu.es.xlf
@@ -3258,9 +3258,9 @@
         <target>Das neueste Geschwätz:</target>
       </segment>
     </unit>
-    <unit id="yH_PodW">
+    <unit id="Lg5PYa2">
       <notes>
-        <note category="german">Our scouts report that they have spotted a mysterious stranger in the vicinity of the town...</note>
+        <note category="german">Unsere Späher berichten, dass sie einen Mysteriösen Fremden in der Umgebung der Stadt gesichtet haben...</note>
         <note category="from">php:///src/Service/GazetteService.php</note>
         <note category="state">new</note>
       </notes>
