--- a/translations/soul+intl-icu.fr.xlf
+++ b/translations/soul+intl-icu.fr.xlf
@@ -4454,7 +4454,7 @@
       </notes>
       <segment>
         <source>Spieler, die dich als Freund hinzugefügt haben</source>
-        <target>Les joueurs qui vont ont ajouté en ami</target>
+        <target>Les joueurs qui vous ont ajouté en ami</target>
       </segment>
     </unit>
     <unit id="xMippYH">
