--- a/translations/admin+intl-icu.fr.xlf
+++ b/translations/admin+intl-icu.fr.xlf
@@ -4914,5 +4914,15 @@
         <target>{playername} masqué</target>
       </segment>
     </unit>
+    <unit id="frwRQ0F" name="Seelenpunkte setzen">
+      <notes>
+        <note category="german">Seelenpunkte setzen</note>
+        <note category="from">twig:///templates/ajax/admin/users/account.html.twig</note>
+      </notes>
+      <segment>
+        <source>Seelenpunkte setzen</source>
+        <target>Définir les points d'âme</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
